--- a/app/src/main/res/layout/fragment_settings_account.xml
+++ b/app/src/main/res/layout/fragment_settings_account.xml
@@ -2,14 +2,15 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 18.01.20 16:59
+  ~ Last modified 18.01.20 17:46
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
   ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/containerSettingsAcc"
+<androidx.constraintlayout.widget.ConstraintLayout
+	android:id="@+id/containerSettingsAcc"
 	android:layout_height="match_parent"
 	android:layout_width="match_parent"
 	android:padding="@dimen/general_margin_8"
