--- a/app/src/main/res/layout/fragment_place_detailed.xml
+++ b/app/src/main/res/layout/fragment_place_detailed.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 15.12.19 16:06
+  ~ Copyright (c) 2020. All rights reserved.
+  ~ Last modified 20.01.20 20:55
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -16,26 +16,27 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-	<androidx.core.widget.NestedScrollView
+	<com.google.android.material.appbar.AppBarLayout
+		android:id="@+id/appBarPlaceDetailed"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:overScrollMode="never"
-		app:layout_behavior="@string/appbar_scrolling_view_behavior">
+		android:layout_height="300dp"
+		android:theme="@style/AppTheme.AppBarOverlay" >
 
-		<androidx.constraintlayout.widget.ConstraintLayout
+		<com.google.android.material.appbar.CollapsingToolbarLayout
+			android:id="@+id/collapseBarPlaceDetailed"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent" >
+			android:layout_height="match_parent"
+			app:collapsedTitleTextAppearance="@style/ToolbarTitle"
+			app:contentScrim="@color/colorPrimary"
+			app:expandedTitleTextAppearance="@style/CollapsingToolbarExpandedTitleWhite"
+			app:layout_scrollFlags="scroll|exitUntilCollapsed"
+			app:title="Test place title">
 
 			<androidx.viewpager2.widget.ViewPager2
 				android:id="@+id/viewPagerPlacePhotos"
 				android:layout_width="match_parent"
-				android:layout_height="300dp"
-				android:background="@color/colorPrimary"
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintTop_toTopOf="parent"
-				app:layout_constraintTop_toBottomOf="@id/tvPlaceAboutHeader"/>
+				android:layout_height="match_parent"
+				android:background="@color/colorPrimary" />
 
 			<com.google.android.material.tabs.TabLayout
 				android:id="@+id/tlDotsIndicatorPlace"
@@ -50,27 +51,29 @@
 				app:tabIndicatorColor="@color/gradient1"
 				app:tabIndicatorGravity="center"
 				app:tabGravity="center"
-				app:tabMaxWidth="12dp"
+				app:tabMaxWidth="12dp" />
 
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintTop_toTopOf="parent"
-				app:layout_constraintBottom_toBottomOf="@id/viewPagerPlacePhotos"
-				app:layout_constraintVertical_bias="1.0"/>
+			<androidx.appcompat.widget.Toolbar
+				android:id="@+id/toolbarPlaceDetailed"
+				android:layout_width="match_parent"
+				android:layout_height="?attr/actionBarSize"
+				app:layout_collapseMode="pin"
+				app:navigationIcon="@drawable/ic_arrow_back_24dp"
+				app:popupTheme="@style/menuPopupStyle" />
 
-			<TextView
-				android:id="@+id/tvPlaceTitle"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginStart="@dimen/general_margin_16"
+		</com.google.android.material.appbar.CollapsingToolbarLayout>
 
-				android:text="TEST TEST"
-				android:textSize="28sp"
-				style="@style/CollapsingToolbarExpandedTitleWhite"
+	</com.google.android.material.appbar.AppBarLayout>
 
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toTopOf="parent"
-				app:layout_constraintBottom_toBottomOf="@id/viewPagerPlacePhotos"
-				app:layout_constraintVertical_bias="0.9" />
+	<androidx.core.widget.NestedScrollView
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:overScrollMode="never"
+		app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+		<androidx.constraintlayout.widget.ConstraintLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent" >
 
 			<TextView
 				android:id="@+id/tvPlaceAboutHeader"
@@ -84,8 +87,7 @@
 
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintTop_toBottomOf="@id/viewPagerPlacePhotos"
-				app:layout_constraintBottom_toTopOf="@id/tvPlaceAboutText"
+				app:layout_constraintTop_toTopOf="parent"
 				/>
 
 			<TextView
