--- a/app/src/main/res/drawable/ic_chat_send_24dp.xml
+++ b/app/src/main/res/drawable/ic_chat_send_24dp.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 04.12.19 21:56
+  ~ Copyright (c) 2020. All rights reserved.
+  ~ Last modified 21.01.20 16:05
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -14,6 +14,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="@color/white_50"
+        android:fillColor="@color/white"
         android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
 </vector>
